tests/snapshots/step_6__match_call_with_guard.snap
---
source: tests/step_6.rs
expression: "parse(r#\"Msg(count > 3 -> \"big\" or count -> \"small\")\"#)"
---
File {
    aliases: [],
    enums: [],
    traits: [],
    impls: [],
    defs: [],
    body: MatchCall {
        enum_name: "Msg",
        enum_span: Span {
            start: 0,
            end: 3,
        },
        arms: [
            MatchArm {
                pattern: Guard(
                    Binary {
                        op: Gt,
                        lhs: Var {
                            name: "count",
                            span: Span {
                                start: 4,
                                end: 9,
                            },
                        },
                        rhs: Int {
                            value: 3,
                            span: Span {
                                start: 12,
                                end: 13,
                            },
                        },
                        span: Span {
                            start: 4,
                            end: 13,
                        },
                    },
                ),
                body: Str {
                    text: "big",
                    span: Span {
                        start: 17,
                        end: 22,
                    },
                },
                span: Span {
                    start: 4,
                    end: 22,
                },
            },
            MatchArm {
                pattern: Guard(
                    Var {
                        name: "count",
                        span: Span {
                            start: 26,
                            end: 31,
                        },
                    },
                ),
                body: Str {
                    text: "small",
                    span: Span {
                        start: 35,
                        end: 42,
                    },
                },
                span: Span {
                    start: 26,
                    end: 42,
                },
            },
        ],
        span: Span {
            start: 0,
            end: 43,
        },
    },
    route_refs: [],
    routes: {},
}
