tests/snapshots/step_6__match_call_with_payload_and_default.snap
---
source: tests/step_6.rs
expression: "parse(r#\"Shape(Circle{r} -> r * r or Point -> 0 or any() -> 99)\"#)"
---
File {
    aliases: [],
    enums: [],
    traits: [],
    impls: [],
    defs: [],
    body: MatchCall {
        enum_name: "Shape",
        enum_span: Span {
            start: 0,
            end: 5,
        },
        arms: [
            MatchArm {
                pattern: Variant {
                    name: "Circle",
                    span: Span {
                        start: 6,
                        end: 15,
                    },
                    fields: Some(
                        FieldsPattern {
                            names: [
                                (
                                    "r",
                                    Span {
                                        start: 13,
                                        end: 14,
                                    },
                                ),
                            ],
                            rest: false,
                            span: Span {
                                start: 12,
                                end: 15,
                            },
                        },
                    ),
                },
                body: Binary {
                    op: Mul,
                    lhs: Var {
                        name: "r",
                        span: Span {
                            start: 19,
                            end: 20,
                        },
                    },
                    rhs: Var {
                        name: "r",
                        span: Span {
                            start: 23,
                            end: 24,
                        },
                    },
                    span: Span {
                        start: 19,
                        end: 24,
                    },
                },
                span: Span {
                    start: 6,
                    end: 24,
                },
            },
            MatchArm {
                pattern: Variant {
                    name: "Point",
                    span: Span {
                        start: 28,
                        end: 33,
                    },
                    fields: None,
                },
                body: Int {
                    value: 0,
                    span: Span {
                        start: 37,
                        end: 38,
                    },
                },
                span: Span {
                    start: 28,
                    end: 38,
                },
            },
            MatchArm {
                pattern: Default {
                    span: Span {
                        start: 42,
                        end: 47,
                    },
                },
                body: Int {
                    value: 99,
                    span: Span {
                        start: 51,
                        end: 53,
                    },
                },
                span: Span {
                    start: 42,
                    end: 53,
                },
            },
        ],
        span: Span {
            start: 0,
            end: 54,
        },
    },
    route_refs: [],
    routes: {},
}
